[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radius-wallet"
version = "0.1.0"
description = "Simple Python wallet library for the Radius network"
requires-python = ">=3.10"
dependencies = [
    "eth-account>=0.13.0",
    "eth-abi>=4.0.0",
    "eth-utils>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest"]
